cursive-bootstrap/tests/ui/E-CON/E-CON-0086.cursive
// RUN: compile-fail
// DIAG: E-UNS-0101
// SPEC: 1.4
// DESC: Unsupported construct in Cursive0 subset (closure)

record Data {
    value: i32
}

procedure outlives_shared() -> () -> i32 {
    let f = closure  //~ ERROR E-UNS-0101
    return f
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}

